# cupang-updater

./: .gitignore  README.md  TODO.md  cli.py  cupang-updater.spec  pyproject.toml
cupang_updater/: main.py
cupang_updater/app/: app_config.py
cupang_updater/base_class/: __init__.py  updater_base.py
cupang_updater/checker/: __init__.py  plugin_checker.py
cupang_updater/cmd/: __init__.py  cmd_opt.py
cupang_updater/config/: config.py  default_config.py
cupang_updater/downloader/: downloader.py
cupang_updater/logger/: logger.py
cupang_updater/manager/: __init__.py  ext_manager.py  server_updater_manager.py  updater_manager.py
cupang_updater/plugin_updater/: __init__.py  bukkit.py  custom.py  github.py  jenkins.py  modrinth.py  spigot.py
cupang_updater/plugin_updater/base/: plugin_updater_base.py
cupang_updater/server_updater/: __init__.py  papermc.py  purpur.py  serverjars.py
cupang_updater/server_updater/base/: server_updater_base.py
cupang_updater/task/: scan.py  update.py
cupang_updater/utils/: __init__.py  common.py  date.py  files.py  hash.py  special.py  url.py
